tests/baselines/reference/genericConstructSignatureInInterface(strict=true).errors.txt
genericConstructSignatureInInterface.ts(2,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
genericConstructSignatureInInterface.ts(6,13): error TS2454: Variable 'v' is used before being assigned.


==== genericConstructSignatureInInterface.ts (2 errors) ====
    interface C {
        new <T>(x: T);
        ~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    var v: C;
    var r = new v<number>(1);
                ~
!!! error TS2454: Variable 'v' is used before being assigned.